--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=blogging_platform_with_weather_int
+server.port=8090
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=1234
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/read_with_me_v1
+
+
+weather.api.key=8b3d21fc7e2884db329ff3a38781c4a3
